Dependency Injection implementation

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/MapFragment"
-        android:name="com.capricorn.carslist.ui.component.MapFragment"
+        android:name="com.capricorn.carslist.ui.home.MapFragment"
         android:label="@string/map_fragment_label"
         tools:layout="@layout/fragment_map">
 
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/ListFragment"
-        android:name="com.capricorn.carslist.ui.component.ListFragment"
+        android:name="com.capricorn.carslist.ui.home.ListFragment"
         android:label="@string/List_fragment_label"
         tools:layout="@layout/fragment_list">
 
@@ -32,7 +32,7 @@
 
     <dialog
         android:id="@+id/CarDetailFragment"
-        android:name="com.capricorn.carslist.ui.component.CarDetailBottomSheet"
+        android:name="com.capricorn.carslist.ui.home.CarDetailBottomSheet"
         android:label="@string/car_detail_label"
         tools:layout="@layout/fragment_car_detail_bottom_sheet">
 
