--- a/app/src/main/res/layout/fragment_car_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_car_detail_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.component.CarDetailBottomSheet">
+    tools:context=".ui.home.CarDetailBottomSheet">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
