--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="space_small">4dp</dimen>
+    <dimen name="space_normal">8dp</dimen>
+    <dimen name="space_double">16dp</dimen>
+    <dimen name="space_double_double">32dp</dimen>
 </resources>
