Navigation Graph Instrumentation testing Some minor design Changes

--- a/app/src/main/res/drawable/recycler_view_divider.xml
+++ b/app/src/main/res/drawable/recycler_view_divider.xml
@@ -4,7 +4,7 @@
 
     <shape>
         <size android:height="0.5dp" />
-        <solid android:color="@android:color/darker_gray" />
+        <solid android:color="@android:color/black" />
     </shape>
 
 </inset>
