--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black"
     android:paddingTop="@dimen/space_double"
     android:paddingStart="@dimen/space_double"
     android:paddingEnd="@dimen/space_double"
@@ -15,13 +14,13 @@
         android:id="@+id/carName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/black"
         android:paddingStart="@dimen/space_normal"
         android:paddingTop="4dp"
         android:paddingEnd="@dimen/space_normal"
         android:paddingBottom="4dp"
         android:textAllCaps="true"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/carImage"
